[package]
name = "dmon"
version = "0.2.0"
edition = "2024"
description = "A library for building daemon processes."
repository = "https://github.com/genekoval/dmon-rs"
license = "MIT"
keywords = ["daemon", "daemonize", "fork", "service", "unix"]
categories = ["os::unix-apis"]

[dependencies]
nix = { version = "0.30", features = ["fs", "process", "user"] }
serde = { version = "1", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive", "string", "wrap_help"] }
serde_test = "1"

[features]
serde = ["dep:serde"]
